--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Forms" version="1.3.3.6323" targetFramework="MonoAndroid50" />
+  <package id="sqlite-net-pcl" version="1.0.11" targetFramework="monoandroid6" />
+  <package id="SQLitePCL.raw_basic" version="0.7.1" targetFramework="monoandroid6" />
+  <package id="System.ObjectModel" version="4.0.0" targetFramework="monoandroid6" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="monoandroid6" />
+  <package id="Xamarin.Android.Support.v4" version="23.0.1.1" targetFramework="monoandroid6" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="22.2.1.0" targetFramework="monoandroid6" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="22.2.1.0" targetFramework="monoandroid6" />
+  <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="monoandroid6" />
+  <package id="Xamarin.Forms.Maps" version="1.5.0.6447" targetFramework="monoandroid6" />
+  <package id="Xamarin.GooglePlayServices.Base" version="25.0.0.0" targetFramework="monoandroid6" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="25.0.0.0" targetFramework="monoandroid6" />
 </packages>
