--- a/Groupster/Groupster.csproj
+++ b/Groupster/Groupster.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{507D72DC-6D46-4324-9CF9-4988B0A5B0A2}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Groupster</RootNamespace>
+    <RootNamespace>Groupster.Core</RootNamespace>
     <AssemblyName>Groupster</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
@@ -32,18 +32,104 @@
   <ItemGroup>
     <Compile Include="Groupster.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Group.cs" />
+    <Compile Include="Models\DataEntityBase.cs" />
+    <Compile Include="Data\GroupsterDatabase.cs" />
+    <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="Views\RootPage.cs" />
+    <Compile Include="Views\LoadingPage.cs" />
+    <Compile Include="Views\MenuPage.cs" />
+    <Compile Include="Models\GeoLocation.cs" />
+    <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\OptionItem.cs" />
+    <Compile Include="Models\Place.cs" />
+    <Compile Include="Models\PlacesRootObject.cs" />
+    <Compile Include="ViewModels\LoadingViewModel.cs" />
+    <Compile Include="Services\Interfaces\IGooglePlacesService.cs" />
+    <Compile Include="ViewModels\GroupMembersMapViewModel.cs" />
+    <Compile Include="Data\Interfaces\ISQLite.cs" />
+    <Compile Include="Models\Interfaces\IDataEntity.cs" />
+    <Compile Include="Helpers\CustomControls\CustomMap.cs" />
+    <Compile Include="Helpers\CustomControls\CustomPin.cs" />
+    <Compile Include="Helpers\CustomControls\ExtraLargeLabel.cs" />
+    <Compile Include="Helpers\CustomControls\ImageButton.cs" />
+    <Compile Include="Helpers\CustomControls\LargeLabel.cs" />
+    <Compile Include="Services\GooglePlacesService.cs" />
+    <Compile Include="Helpers\HttpClientExtensions.cs" />
+    <Compile Include="Models\GroupViewTemplate.cs" />
+    <Compile Include="Models\Forecast.cs" />
+    <Compile Include="Models\ForecastOptionItem.cs" />
+    <Compile Include="Views\ForecastPage.cs" />
+    <Compile Include="ViewModels\ForecastViewModel.cs" />
+    <Compile Include="Views\GroupMembersMapPage.cs" />
+    <Compile Include="Services\ForecastService.cs" />
+    <Compile Include="Services\Interfaces\IForecastService.cs" />
+    <Compile Include="Models\Interfaces\IProfile.cs" />
+    <Compile Include="Services\Interfaces\IOpenGroupMapService.cs" />
+    <Compile Include="Services\OpenGroupMapService.cs" />
+    <Compile Include="Models\OpenGroupForecast.cs" />
+    <Compile Include="Models\GroupUser.cs" />
+    <Compile Include="Models\Message.cs" />
+    <Compile Include="Models\GroupChat.cs" />
+    <Compile Include="Models\UserChat.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <Import Project="..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
+  <Import Project="..\packages\Xamarin.Forms.1.5.0.6447\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.5.0.6447\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
-      <HintPath>..\packages\Xamarin.Forms.1.3.3.6323\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
+      <HintPath>..\packages\Xamarin.Forms.1.5.0.6447\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Platform">
+      <HintPath>..\packages\Xamarin.Forms.1.5.0.6447\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Platform.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Xaml">
-      <HintPath>..\packages\Xamarin.Forms.1.3.3.6323\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
+      <HintPath>..\packages\Xamarin.Forms.1.5.0.6447\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCL.raw">
+      <HintPath>..\packages\SQLitePCL.raw_basic.0.7.1\lib\portable-net45+netcore45+wp8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLitePCL.raw.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLite-net">
+      <HintPath>..\packages\sqlite-net-pcl.1.0.11\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLite-net.dll</HintPath>
+    </Reference>
+    <Reference Include="ModernHttpClient">
+      <HintPath>..\packages\modernhttpclient.2.4.2\lib\Portable-Net45+WinRT45+WP8+WPA81\ModernHttpClient.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Extensions">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Primitives">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\portable-net45+wp80+win8+wpa81+dnxcore50\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Maps">
+      <HintPath>..\packages\Xamarin.Forms.Maps.1.5.0.6447\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Maps.dll</HintPath>
+    </Reference>
+    <Reference Include="ExifLib">
+      <HintPath>..\packages\ExifLib.PCL.1.0.0\lib\portable-net45+sl50+win+WindowsPhoneApp81+wp80+MonoAndroid10+MonoTouch10\ExifLib.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Labs">
+      <HintPath>..\packages\Xamarin.Forms.Labs.1.0.1.5\lib\portable-net45+win+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.Labs.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Data\" />
+    <Folder Include="Views\" />
+    <Folder Include="Models\Interfaces\" />
+    <Folder Include="Services\" />
+    <Folder Include="Services\Interfaces\" />
+    <Folder Include="Data\Interfaces\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="Helpers\CustomControls\" />
   </ItemGroup>
 </Project>
