* Fonts.cs: * packages.config: * MainActivity.cs: * Groupster.cs: * AppColors.cs: * packages.config: * packages.config: * Group.cs: * LoginPageRenderer.cs: * Groupster.csproj: * RootPage.cs: * MenuPage.cs: * UserCell.cs: * GroupPage.cs: * UserChat.cs: * GroupCell.cs: * LoginPage.cs: * LoginInfo.cs: * GroupChat.cs: * W.png: * LoadingPage.cs: * ProfilePage.cs: * Credentials.cs: * UserListPage.cs: * ForecastPage.cs: * Groupster.UITests.csproj: * GroupListPage.cs: * icon.png: * UserDetailPage.cs: * Groupster.iOS.csproj: * BaseContentPage.cs: * OAuthSettings.cs: * GroupDetailPage.cs: * EventOptionItem.cs: * AndroidManifest.xml: * Resource.designer.cs: * oblarneys.jpg: * icon.png: * ForecastOptionItem.cs: * LoginViewModel.cs: * icon.png: * ErnestSmith.png: * WilliamHall.png: * RobertSpall.png: * icon.png: * PaulTriquet.png: * zacbrownband.jpg: * OpenGroupMapService.cs: * CecilKinross.png: * GirlsNightOut.jpg: * PassportCopter.png: * GroupLoadingViewModel.cs: * LargeLabel.cs: * ImageButton.cs: * Groupster72_white_0F7800.png: * IOpenGroupMapService.cs:
* Groupster.Droid.csproj: Added initial login screen and landing
  screen

--- a/Groupster/Groupster.csproj
+++ b/Groupster/Groupster.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,7 +9,8 @@
     <RootNamespace>Groupster.Core</RootNamespace>
     <AssemblyName>Groupster</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Profile7</TargetFrameworkProfile>
+    <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,14 +39,12 @@
     <Compile Include="Data\GroupsterDatabase.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="Views\RootPage.cs" />
-    <Compile Include="Views\LoadingPage.cs" />
     <Compile Include="Views\MenuPage.cs" />
     <Compile Include="Models\GeoLocation.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\OptionItem.cs" />
     <Compile Include="Models\Place.cs" />
     <Compile Include="Models\PlacesRootObject.cs" />
-    <Compile Include="ViewModels\LoadingViewModel.cs" />
     <Compile Include="Services\Interfaces\IGooglePlacesService.cs" />
     <Compile Include="ViewModels\GroupMembersMapViewModel.cs" />
     <Compile Include="Data\Interfaces\ISQLite.cs" />
@@ -58,13 +57,7 @@
     <Compile Include="Services\GooglePlacesService.cs" />
     <Compile Include="Helpers\HttpClientExtensions.cs" />
     <Compile Include="Models\GroupViewTemplate.cs" />
-    <Compile Include="Models\Forecast.cs" />
-    <Compile Include="Models\ForecastOptionItem.cs" />
-    <Compile Include="Views\ForecastPage.cs" />
-    <Compile Include="ViewModels\ForecastViewModel.cs" />
     <Compile Include="Views\GroupMembersMapPage.cs" />
-    <Compile Include="Services\ForecastService.cs" />
-    <Compile Include="Services\Interfaces\IForecastService.cs" />
     <Compile Include="Models\Interfaces\IProfile.cs" />
     <Compile Include="Services\Interfaces\IOpenGroupMapService.cs" />
     <Compile Include="Services\OpenGroupMapService.cs" />
@@ -73,63 +66,80 @@
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\GroupChat.cs" />
     <Compile Include="Models\UserChat.cs" />
+    <Compile Include="Models\EventOptionItem.cs" />
+    <Compile Include="Views\GroupPage.cs" />
+    <Compile Include="ViewModels\GroupLoadingViewModel.cs" />
+    <Compile Include="Views\LoginPage.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="Models\Credentials.cs" />
+    <Compile Include="Views\BaseContentPage.cs" />
+    <Compile Include="Views\ProfilePage.cs" />
+    <Compile Include="Helpers\OAuthSettings.cs" />
+    <Compile Include="Models\LoginInfo.cs" />
+    <Compile Include="AppColors.cs" />
+    <Compile Include="Views\GroupListPage.cs" />
+    <Compile Include="Fonts.cs" />
+    <Compile Include="Views\GroupCell.cs" />
+    <Compile Include="Views\GroupDetailPage.cs" />
+    <Compile Include="Views\UserListPage.cs" />
+    <Compile Include="Views\UserCell.cs" />
+    <Compile Include="Views\UserDetailPage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <Import Project="..\packages\Xamarin.Forms.1.5.0.6447\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.5.0.6447\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
+  <Import Project="..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
+  <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <ItemGroup>
-    <Reference Include="Xamarin.Forms.Core">
-      <HintPath>..\packages\Xamarin.Forms.1.5.0.6447\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Xamarin.Forms.Platform">
-      <HintPath>..\packages\Xamarin.Forms.1.5.0.6447\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Platform.dll</HintPath>
-    </Reference>
-    <Reference Include="Xamarin.Forms.Xaml">
-      <HintPath>..\packages\Xamarin.Forms.1.5.0.6447\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
-    </Reference>
-    <Reference Include="SQLitePCL.raw">
-      <HintPath>..\packages\SQLitePCL.raw_basic.0.7.1\lib\portable-net45+netcore45+wp8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLitePCL.raw.dll</HintPath>
-    </Reference>
     <Reference Include="SQLite-net">
       <HintPath>..\packages\sqlite-net-pcl.1.0.11\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLite-net.dll</HintPath>
     </Reference>
     <Reference Include="ModernHttpClient">
       <HintPath>..\packages\modernhttpclient.2.4.2\lib\Portable-Net45+WinRT45+WP8+WPA81\ModernHttpClient.dll</HintPath>
     </Reference>
-    <Reference Include="System.Net.Http">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net.Http.Extensions">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net.Http.Primitives">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Primitives.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\portable-net45+wp80+win8+wpa81+dnxcore50\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Xamarin.Forms.Maps">
-      <HintPath>..\packages\Xamarin.Forms.Maps.1.5.0.6447\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Maps.dll</HintPath>
+    <Reference Include="Xamarin.Forms.Core">
+      <HintPath>..\packages\Xamarin.Forms.1.5.1.6471\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Platform">
+      <HintPath>..\packages\Xamarin.Forms.1.5.1.6471\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Platform.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Xaml">
+      <HintPath>..\packages\Xamarin.Forms.1.5.1.6471\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
     <Reference Include="ExifLib">
-      <HintPath>..\packages\ExifLib.PCL.1.0.0\lib\portable-net45+sl50+win+WindowsPhoneApp81+wp80+MonoAndroid10+MonoTouch10\ExifLib.dll</HintPath>
+      <HintPath>..\packages\ExifLib.PCL.1.0.1\lib\portable-net45+sl50+win+WindowsPhoneApp81+wp80+Xamarin.iOS10+MonoAndroid10+MonoTouch10\ExifLib.dll</HintPath>
     </Reference>
-    <Reference Include="Xamarin.Forms.Labs">
-      <HintPath>..\packages\Xamarin.Forms.Labs.1.0.1.5\lib\portable-net45+win+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.Labs.dll</HintPath>
+    <Reference Include="Xamarin.Forms.Maps">
+      <HintPath>..\packages\Xamarin.Forms.Maps.1.5.1.6471\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Maps.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCL.raw">
+      <HintPath>..\packages\SQLitePCL.raw_basic.0.8.2\lib\portable-net45+netcore45+wp8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLitePCL.raw.dll</HintPath>
+    </Reference>
+    <Reference Include="XLabs.Core">
+      <HintPath>..\packages\XLabs.Core.2.0.5782\lib\portable-net45+netcore45+wp8+MonoAndroid1+MonoTouch1\XLabs.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="XLabs.Serialization">
+      <HintPath>..\packages\XLabs.Serialization.2.0.5782\lib\portable-net45+netcore45+wp8+MonoAndroid1+MonoTouch1\XLabs.Serialization.dll</HintPath>
+    </Reference>
+    <Reference Include="XLabs.Forms">
+      <HintPath>..\packages\XLabs.Forms.2.0.5782\lib\portable-net45+netcore45+wpa81+wp8\XLabs.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Extensions">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net45+win8\System.Net.Http.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Primitives">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net45+win8\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="XLabs.Ioc">
+      <HintPath>..\packages\XLabs.IoC.2.0.5782\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1+Xamarin.iOS10\XLabs.Ioc.dll</HintPath>
+    </Reference>
+    <Reference Include="XLabs.Platform">
+      <HintPath>..\packages\XLabs.Platform.2.0.5782\lib\portable-net45+netcore45+wp8+MonoAndroid1+MonoTouch1\XLabs.Platform.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
-    <Folder Include="Data\" />
-    <Folder Include="Views\" />
-    <Folder Include="Models\Interfaces\" />
-    <Folder Include="Services\" />
-    <Folder Include="Services\Interfaces\" />
-    <Folder Include="Data\Interfaces\" />
-    <Folder Include="Helpers\" />
-    <Folder Include="Helpers\CustomControls\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
