--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,14 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="MonoAndroid60" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="MonoAndroid60" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="MonoAndroid60" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="MonoAndroid60" />
   <package id="sqlite-net-pcl" version="1.0.11" targetFramework="monoandroid6" />
-  <package id="SQLitePCL.raw_basic" version="0.7.1" targetFramework="monoandroid6" />
+  <package id="SQLitePCL.raw_basic" version="0.8.2" targetFramework="MonoAndroid60" />
   <package id="System.ObjectModel" version="4.0.0" targetFramework="monoandroid6" />
   <package id="System.Runtime" version="4.0.0" targetFramework="monoandroid6" />
-  <package id="Xamarin.Android.Support.v4" version="23.0.1.1" targetFramework="monoandroid6" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="22.2.1.0" targetFramework="monoandroid6" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="22.2.1.0" targetFramework="monoandroid6" />
-  <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="monoandroid6" />
-  <package id="Xamarin.Forms.Maps" version="1.5.0.6447" targetFramework="monoandroid6" />
-  <package id="Xamarin.GooglePlayServices.Base" version="25.0.0.0" targetFramework="monoandroid6" />
-  <package id="Xamarin.GooglePlayServices.Maps" version="25.0.0.0" targetFramework="monoandroid6" />
+  <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Forms.Maps" version="1.5.1.6471" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.GooglePlayServices.Base" version="27.0.0.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="27.0.0.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="27.0.0.0" targetFramework="MonoAndroid60" />
+  <package id="XLabs.Core" version="2.0.5782" targetFramework="MonoAndroid60" />
+  <package id="XLabs.Forms" version="2.0.5782" targetFramework="MonoAndroid60" />
+  <package id="XLabs.IoC" version="2.0.5782" targetFramework="MonoAndroid60" />
+  <package id="XLabs.Platform" version="2.0.5782" targetFramework="MonoAndroid60" />
+  <package id="XLabs.Serialization" version="2.0.5782" targetFramework="MonoAndroid60" />
 </packages>
