--- a/Groupster/packages.config
+++ b/Groupster/packages.config
@@ -1,14 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExifLib.PCL" version="1.0.0" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="modernhttpclient" version="2.4.2" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="sqlite-net-pcl" version="1.0.11" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="SQLitePCL.raw_basic" version="0.7.1" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Xamarin.Forms.Labs" version="1.0.1.5" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Xamarin.Forms.Maps" version="1.5.0.6447" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="portable-net45+win80+wp80" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net45+win80+wp80" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="modernhttpclient" version="2.4.2" targetFramework="portable-net45+win80+wp80" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable-net45+win80+wp80" />
+  <package id="sqlite-net-pcl" version="1.0.11" targetFramework="portable-net45+win80+wp80" />
+  <package id="SQLitePCL.raw_basic" version="0.8.2" targetFramework="portable-net45+win80+wp80" />
+  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="portable-net45+win80+wp80" />
+  <package id="Xamarin.Forms.Maps" version="1.5.1.6471" targetFramework="portable-net45+win80+wp80" />
+  <package id="XLabs.Core" version="2.0.5782" targetFramework="portable-net45+win80+wp80" />
+  <package id="XLabs.Forms" version="2.0.5782" targetFramework="portable-net45+win80+wp80" />
+  <package id="XLabs.IoC" version="2.0.5782" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="XLabs.Platform" version="2.0.5782" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="XLabs.Serialization" version="2.0.5782" targetFramework="portable-net45+win80+wp80" />
 </packages>
